--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <h1>Lista de Livros da Morena mais linda do mundo</h1>
-        <p>Adicione todos os seus livros de romance aqui meu bem</p>
+        <h1>Lista de Livros</h1>
+        <p>Adicione todos os seus livros aqui</p>
     </header>
 
     <div class="container">
